--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
-faeuufhaeouffijinifajehnoijcjaefnoidnfoidcnbefwondhnoewidjn
+Hi, Welcome to uncoru!
+
+The place where we build some cool and hot things.
